runtime/grammars/sources/edoc/test/corpus/tags.txt
================================================================================
doc tag
================================================================================
@doc This is the first paragraph.

--------------------------------------------------------------------------------

(source
  (tag))

================================================================================
author tags
================================================================================
@author Me <me@example.org>
@author <me@example.org>

--------------------------------------------------------------------------------

(source
  (tag)
  (email_address)
  (tag)
  (email_address))

================================================================================
todo with colon is coerced to a tag
================================================================================
TODO: call your mother

--------------------------------------------------------------------------------

(source
  (tag))

================================================================================
see function
================================================================================
@see lists:nth/2

--------------------------------------------------------------------------------

(source
  (tag)
  (expression
    (module)
    (function)
    (arity)))

================================================================================
param
================================================================================
@param Server the server to send a message to

--------------------------------------------------------------------------------

(source
  (tag)
  (parameter))
